--- a/frontent/01-starting-project/index.html
+++ b/frontent/01-starting-project/index.html
@@ -1,4 +1,4 @@
-</* <main className="flex min-h-screen flex-col items-center justify-between p-24"> */DOCTYPE html>
+<main className="flex min-h-screen flex-col items-center justify-between p-24">
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
